# socar-de

./: readme.md
fastapi_demo/: .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi_demo.db  pyproject.toml
fastapi_demo/app/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
fastapi_demo/app/routes/: cars.py
fastapi_demo/initdb/: init.sql
