[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["socar-fren <fren@socar.kr>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
fastapi = "^0.116.0"
sqlalchemy = "^2.0.41"
pymysql = "^1.1.0"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
